<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayout"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.levko.roma.levkohomeworkstyles.MainActivity">

    <TextView
        android:id="@+id/tv_description"
        style="@style/styleTextView"
        android:text="@string/text_description" />

    <EditText
        android:id="@+id/edt"
        style="@style/styleEditText"
        android:layout_below="@id/tv_description"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:inputType="number" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/styleButton"
        android:layout_below="@id/edt"
        android:layout_centerVertical="true"
        android:text="@string/plus" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/styleButton"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edt"
        android:layout_centerVertical="true"
        android:text="@string/minus" />


    <EditText
        android:id="@+id/edt2"
        style="@style/styleEditText"
        android:layout_below="@+id/btnPlus"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="number"
        android:hint="@string/text_editText" />

    <TextView
        android:id="@+id/tv_results"
        style="@style/styleTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_result"
        android:textSize="@dimen/text_textView_results" />


</RelativeLayout>
